--- a/docs/C++/latex/_unity_project_setup.tex
+++ b/docs/C++/latex/_unity_project_setup.tex
@@ -1,4 +1,4 @@
-Next Tutorial\+: \mbox{\hyperlink{_using_the_raytracer}{Using The Raytracer}}
+Next Tutorial\+: \mbox{\hyperlink{_using_the_raytracer}{Using The Raytracer}} OR \mbox{\hyperlink{_generating_a_graph}{Generating A Graph}}
 
 
 \begin{DoxyItemize}
