--- a/docs/C++/latex/_unity_tutorials.tex
+++ b/docs/C++/latex/_unity_tutorials.tex
@@ -2,5 +2,6 @@
 \begin{DoxyItemize}
 \item \mbox{\hyperlink{_unity_project_setup}{1. Unity Project Setup}}
 \item \mbox{\hyperlink{_using_the_raytracer}{2A. Using The Raytracer}}
-\item \mbox{\hyperlink{_generating_a_graph}{2B. Using the Graph Generator}} 
+\item \mbox{\hyperlink{_generating_a_graph}{2B. Using the Graph Generator}}
+\item \mbox{\hyperlink{_mesh_from_unity}{3. Reading a Mesh Directly From Unity}} 
 \end{DoxyItemize}
